--- a/index.html
+++ b/index.html
@@ -11,32 +11,35 @@
     <body class="position-relative">
         <nav class="navbar sticky-top navbar-expand-lg navbar-light mb-3 py-3" id="nav">
             <div class="container-fluid">
+                <div class="logo-nav">
+                    <img src="./src/img/Logo.png" alt="" />
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse  navbar-light" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item my-2">
+                        <li class="nav-item my-auto  ">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
-                        <li class="nav-item mx-4 my-2">
+                        <li class="nav-item my-auto ">
                             <a class="nav-link" aria-current="page" href="#">Service</a>
                         </li>
-                        <li class="nav-item d-sm-none d-md-none d-xl-block">
+                        <li class="nav-item my-auto ">
                             <img src="./src/img/Logo.png" alt="" />
                         </li>
-                        <li class="nav-item mx-4 my-2">
+                        <li class="nav-item my-auto  ">
                             <a class="nav-link" href="#">Module</a>
                         </li>
-                        <li class="nav-item my-2">
+                        <li class="nav-item my-auto ">
                             <a class="nav-link" href="#"> Testimoni </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <img class="decoration-banner" src="./src/img/decor-banner.png" alt="" />
 
+        <img class="decoration-banner" src="./src/img/decor-banner.png" alt="" />
         <div class="container">
             <div class="row flex banner">
                 <div class="col-lg-6 col-md-6 col-sm-12 text-banner my-auto">
@@ -56,6 +59,7 @@
             </div>
         </div>
 
+        
         <!-- <div class="container-fluid container-indigo">
             <div class="container">
                 <div class="row">
@@ -250,18 +254,17 @@
                 </div>
             </div>
         </div> -->
-
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="./src/js/bootstrap.js"></script>
         <script>
             $(document).ready(function () {
                 $(document).scroll(function () {
                     let y = $(window).scrollTop();
-                    if (y > 0) {
-                        $("#nav").addClass("shActive");
-                    } else {
-                        $("#nav").removeClass("shActive");
-                    }
+                       if (y > 0) {
+                            $("#nav").addClass("shActive");
+                        } else {
+                            $("#nav").removeClass("shActive");
+                        }
                 });
             });
         </script>
