add service and module section

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-4">
+        <!-- <div class="col-sm-12 col-md-4 col-lg-4">
           <div class="top-card shadow-sm">
             <h3 class="pt-2 text-center">Medium</h3>
             <div class="main-card shadow-sm p-3 mb-5" style="width: 100%">
@@ -251,8 +251,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 col-lg-4">
+        </div> -->
+        <!-- <div class="col-sm-12 col-md-4 col-lg-4">
           <div class="top-card shadow-sm">
             <h3 class="pt-2 text-center">Special</h3>
             <div class="main-card shadow-sm p-3 mb-5" style="width: 100%">
@@ -314,7 +314,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -369,14 +369,16 @@
       </div>
     </div> -->
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-6">
           <p>+6281338103038</p>
         </div>
-        <div class="col-6 text-muted float-right">Copyright 2021 Let’s Code</div>
+        <div class="col-6 text-muted float-right">
+          Copyright 2021 Let’s Code
+        </div>
       </div>
-    </div>
+    </div> -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
