--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/bootstrap.css" />
     <link rel="stylesheet" href="./src/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+    />
     <title>Let's Code</title>
   </head>
   <body class="position-relative">
@@ -76,8 +80,8 @@
     <div class="container-fluid container-indigo mt-2 h-100">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 col-lg-4 mt-5">
-            <h2 class="text-secondary fw-bold">Service</h2>
+          <div class="col-md-4 col-lg-4 mt-4">
+            <h1 class="text-secondary fw-bold">Service</h1>
             <p class="text-indigo-500">What will we do for you all</p>
             <p class="text-secondary w-100">
               We will start by giving theory and then practice with the given
@@ -117,11 +121,11 @@
     </div>
 
     <div class="container my-5">
+      <div class="text-center">
+        <h1 class="text-secondary fw-bold">Module</h1>
+        <p class="text-indigo-500">Our Module</p>
+      </div>
       <div class="row">
-        <div class="text-center">
-          <h1 class="text-secondary fw-bold">Module</h1>
-          <p class="text-indigo-500">Our Module</p>
-        </div>
         <div class="col-sm-12 col-md-4 col-lg-4">
           <div class="top-card shadow-sm">
             <h3 class="pt-2 text-center">Beginner</h3>
@@ -185,7 +189,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-sm-12 col-md-4 col-lg-4">
+        <div class="col-sm-12 col-md-4 col-lg-4">
           <div class="top-card shadow-sm">
             <h3 class="pt-2 text-center">Medium</h3>
             <div class="main-card shadow-sm p-3 mb-5" style="width: 100%">
@@ -251,8 +255,8 @@
               </div>
             </div>
           </div>
-        </div> -->
-        <!-- <div class="col-sm-12 col-md-4 col-lg-4">
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-4">
           <div class="top-card shadow-sm">
             <h3 class="pt-2 text-center">Special</h3>
             <div class="main-card shadow-sm p-3 mb-5" style="width: 100%">
@@ -314,76 +318,41 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
 
-    <!-- <div class="container-fluid container-indigo">
+    <div class="container-fluid container-indigo">
       <div class="container">
         <div class="text-center">
-          <h1 class="text-secondary fw-bold">Testimonials</h1>
+          <h1 class="text-secondary">Testimonials</h1>
           <p class="text-indigo-500">
             Our client send us a bunch of smile and we love them
           </p>
         </div>
-        <div
-          id="carouselExampleControls"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="./src/img/banner-image.png"
-                class="d-block w-25"
-                alt="..."
-              />
-              <h1>DEKBO</h1>
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="..." />
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="..." />
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleControls"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
       </div>
-    </div> -->
+    </div>
 
-    <!-- <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <p>+6281338103038</p>
+    <div class="container">
+      <div class="d-flex bd-highlight mb-3">
+        <div class="p-2 bd-highlight">
+          <img src="./src/img/watsap.png" alt="" srcset="" />
+          <a class="link-success" href="#"> +6281338103083</a>
         </div>
-        <div class="col-6 text-muted float-right">
-          Copyright 2021 Let’s Code
+        <div class="ms-auto p-2 bd-highlight">
+          <p class="text-muted float-right">Copyright 2021 Let’s Code</p>
         </div>
       </div>
-    </div> -->
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+    <script src="./src/js/main.js"></script>
     <script src="./src/js/bootstrap.js"></script>
     <script>
       $(document).ready(function () {
