--- a/index.html
+++ b/index.html
@@ -391,16 +391,17 @@
       </section>
     </div>
 
-    <!-- <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <p>+6281338103038</p>
+    <div class="container mt-5">
+      <div class="d-flex bd-highlight mb-3">
+        <div class="p-2 bd-highlight">
+          <img src="./src/img/watsap.png" alt="" />
+          <a href="">+6281338103073</a>
         </div>
         <div class="ms-auto p-2 bd-highlight">
-          <p class="text-muted float-right">Copyright 2021 Let’s Code</p>
+          <p class="text-muted">Copyright 2021 Let’s Code</p>
         </div>
       </div>
-    </div> -->
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
