add link g form

--- a/index.html
+++ b/index.html
@@ -184,7 +184,11 @@
               <div class="border mt-3"></div>
               <div class="text-center mt-3">
                 <h3 class="text-secondary fw-semibold">IDR 200.000,00</h3>
-                <a href="#" class="btn btn-indigo w-75 mt-2">Join Now</a>
+                <a
+                  href="https://forms.gle/QhfXCBQtxxWdVreK6"
+                  class="btn btn-indigo w-75 mt-2"
+                  >Join Now</a
+                >
               </div>
             </div>
           </div>
@@ -251,7 +255,11 @@
               <div class="border mt-3"></div>
               <div class="text-center mt-3">
                 <h3 class="text-secondary fw-semibold">IDR 225.000,00</h3>
-                <a href="#" class="btn btn-indigo w-75 mt-2">Join Now</a>
+                <a
+                  href="https://forms.gle/rriAjRRN5UJqWLi38"
+                  class="btn btn-indigo w-75 mt-2"
+                  >Join Now</a
+                >
               </div>
             </div>
           </div>
@@ -313,8 +321,12 @@
               </ul>
               <div class="border mt-3"></div>
               <div class="text-center mt-3">
-                <h3 class="text-secondary fw-semibold">IDR 225.000,00</h3>
-                <a href="#" class="btn btn-indigo w-75 mt-2">Join Now</a>
+                <h3 class="text-secondary fw-semibold">IDR 250.000,00</h3>
+                <a
+                  href="https://forms.gle/hmdjfexTGLcqW6RG7"
+                  class="btn btn-indigo w-75 mt-2"
+                  >Join Now</a
+                >
               </div>
             </div>
           </div>
